Add paxd control tunnel agent creation
