# internal/transport/http/handler/list_node_daemon_harnesses.go
@@ -1,0 +1,26 @@
+// Code generated by hertz generator.
+
+package handler
+
+import (
+	"context"
+
+	"github.com/cloudwego/hertz/pkg/app"
+	"github.com/cloudwego/hertz/pkg/protocol/consts"
+
+	api "github.com/pax-beehive/pax-manager/internal/transport/http/model/paxmanager/api"
+)
+
+// ListNodeDaemonHarnesses .
+// @router /api/v1/user/:user_id/nodes/:node_id/daemon/harnesses [GET]
+func ListNodeDaemonHarnesses(ctx context.Context, c *app.RequestContext) {
+	var err error
+	var req api.ListNodeDaemonHarnessesRequest
+	err = c.BindAndValidate(&req)
+	if err != nil {
+		c.String(consts.StatusBadRequest, err.Error())
+		return
+	}
+
+	serviceFromContext(c).HandleGenerated(ctx, c, "ListNodeDaemonHarnesses")
+}
